deployment/admission-webhook-datree.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webhook-server
  namespace: datree
  labels:
    env: testing
    app: webhook-server
    owner: datree
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webhook-server
  template:
    metadata:
      labels:
        app: webhook-server
    spec:
      serviceAccountName: webhook-server-datree
      containers:
        - name: server
          # caution: don't change the order of the environment variables
          # changing the order will harm resource patching
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            runAsUser: 25000
          livenessProbe:
            httpGet:
              path: /health
              port: 8443
              scheme: HTTPS
            initialDelaySeconds: 5
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /ready
              port: 8443
              scheme: HTTPS
            initialDelaySeconds: 5
            periodSeconds: 10
          resources:
            limits:
              cpu: 1000m
              memory: 512Mi
            requests:
              cpu: 100m
              memory: 256Mi
          image: datree/admission-webhook:0.1.20
          imagePullPolicy: Always
          ports:
            - containerPort: 8443
              name: webhook-api
          volumeMounts:
            - name: webhook-tls-certs
              mountPath: /run/secrets/tls
              readOnly: true
      volumes:
        - name: webhook-tls-certs
          secret:
            secretName: webhook-server-tls
---
apiVersion: v1
kind: Service
metadata:
  name: webhook-server
  namespace: datree
spec:
  selector:
    app: webhook-server
  ports:
    - port: 443
      targetPort: webhook-api
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: webhook-datree
webhooks:
  - name: webhook-server.datree.svc
    sideEffects: None
    timeoutSeconds: 30
    admissionReviewVersions:
      - v1
      - v1beta1
    clientConfig:
      service:
        name: webhook-server
        namespace: datree
        path: "/validate"
      caBundle: ${CA_PEM_B64}
    namespaceSelector:
      matchExpressions:
        - key: admission.datree/validate
          operator: DoesNotExist
    rules:
      - operations: ["CREATE", "UPDATE"]
        apiGroups: ["*"]
        apiVersions: ["*"]
        resources: ["*"]
